@@ -633,11 +633,6 @@ since this link provides funding for phpMyAdmin.
     <dt id="cfg_TranslationWarningThreshold">$cfg['TranslationWarningThreshold'] integer</dt>
     <dd>Show warning about incomplete translations on certain threshold.</dd>
 
-    <dt id="cfg_AllowThirdPartyFraming">$cfg['AllowThirdPartyFraming'] boolean</dt>
-    <dd>Setting this to <code>true</code> allows a page located on a different
-    domain to call phpMyAdmin inside a frame, and is a potential security
-    hole allowing cross-frame scripting attacks.</dd>
-
     <dt id="cfg_blowfish_secret">$cfg['blowfish_secret'] string</dt>
     <dd>The &quot;cookie&quot; auth_type uses blowfish
         algorithm to encrypt the password.<br />
