@@ -127,7 +127,6 @@ class PMA_Scripts
             || strpos($filename, 'ajax.js') !== false
             || strpos($filename, 'navigation.js') !== false
             || strpos($filename, 'get_image.js.php') !== false
-            || strpos($filename, 'cross_framing_protection.js') !== false
         ) {
             return 0;
         } else {
