@@ -77,14 +77,6 @@ $cfg['ServerLibraryDifference_DisableWarning'] = false;
 $cfg['TranslationWarningThreshold'] = 80;
 
 /**
- * Allows phpMyAdmin to be included from a document located on
- * another domain; setting this to true is a potential security hole
- *
- * @global boolean $cfg['AllowThirdPartyFraming']
- */
-$cfg['AllowThirdPartyFraming'] = false;
-
-/**
  * The 'cookie' auth_type uses blowfish algorithm to encrypt the password. If
  * at least one server configuration uses 'cookie' auth_type, enter here a
  * pass phrase that will be used by blowfish. The maximum length seems to be 46
